# chess-engine

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  bot.sh  build.sh  cleanup.sh  docker-compose.yml  tournament_games.pgn  tournament_results.txt  zimaos-app.yml
.claude/: settings.local.json
.github/workflows/: docker-image.yml
build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docker/: Dockerfile  config.yml  entrypoint.sh  status_server.py
examples/: demo  demo.cpp
scripts/: bench.py  build_macos.sh  build_windows.sh  embed_book.py  endgame_tests.py  play_stockfish.py  selfplay_check.py  update_book.py
src/: baseline_engine.h  board.cpp  board.h  eco.pgn  eco_book.cpp  eco_book.h  engine_tournament.cpp  main.cpp  movegen.cpp  movegen.h  opening_book.cpp  opening_book.h  search.cpp  search.h  terminal_game.cpp  types.h  uci.cpp  uci.h
tests/: CMakeLists.txt  perft.cpp
